# matchroom-scoreboard

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: plugin-main.cpp
